--- a/public/assets/css/output.css
+++ b/public/assets/css/output.css
@@ -711,6 +711,10 @@ html {
   margin-top: 1.25rem;
 }
 
+.mt-auto {
+  margin-top: auto;
+}
+
 .block {
   display: block;
 }
@@ -768,6 +772,10 @@ html {
   height: fit-content;
 }
 
+.min-h-screen {
+  min-height: 100vh;
+}
+
 .w-1\/5 {
   width: 20%;
 }
@@ -823,6 +831,10 @@ html {
 
 .max-w-xs {
   max-width: 20rem;
+}
+
+.flex-grow {
+  flex-grow: 1;
 }
 
 .list-inside {
